--- a/assets/sass/layout/_intro.scss
+++ b/assets/sass/layout/_intro.scss
@@ -25,6 +25,7 @@
 			width: 100%;
 			max-width: 200px;
 			height: auto;
+			object-fit: contain;
 			border: 1px solid transparent;
 			border-radius: 50%;
 
